kube-manifests/vulnerabilitytracer/vulnerabilitytracer-eventscraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-eventscraper
  labels:
    app: vulnerabilitytracer-eventscraper
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-eventscraper
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-eventscraper
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-eventscraper
          name: eventscraper
