kube-manifests/vulnerabilitytracer/vulnerabilitytracer-tracecollector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-tracecollector
  labels:
    app: vulnerabilitytracer-tracecollector
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-tracecollector
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-tracecollector
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-tracecollector
          name: tracecollector
