kube-manifests/vulnerabilitytracer/vulnerabilitytracer-traceprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-traceprocessor
  labels:
    app: vulnerabilitytracer-traceprocessor
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-traceprocessor
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-traceprocessor
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-traceprocessor
          name: traceprocessor
