kube-manifests/vulnerabilitytracer/vulnerabilitytracer-tracescraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-tracescraper
  labels:
    app: vulnerabilitytracer-tracescraper
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-tracescraper
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-tracescraper
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-tracescraper
          name: tracescraper
