kube-manifests/vulnerabilitytracer/vulnerabilitytracer-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-api
  labels:
    app: vulnerabilitytracer-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-api
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-api
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-api
          name: vulnerabilitytracer
          ports:
            - name: http
              containerPort: 10420
---
apiVersion: v1
kind: Service
metadata:
  name: vulnerabilitytracer-api
  labels:
    app: vulnerabilitytracer-api
    version: v1
spec:
  ports:
    - name: http
      port: 10420
  selector:
    app: vulnerabilitytracer-api
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vulnerabilitytracer-api
spec:
  gateways:
    - vulnerabilitytracer-gateway
  hosts:
    - 'api.vulnerabilitytracer.localhost'
  http:
    - route:
        - destination:
            host: vulnerabilitytracer-api.vulnerabilitytracer.svc.cluster.local
