kube-manifests/vulnerabilitytracer/vulnerabilitytracer-coordinator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-coordinator
  labels:
    app: vulnerabilitytracer-coordinator
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-coordinator
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-coordinator
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-coordinator
          name: vulnerabilitytracer
          ports:
            - name: http
              containerPort: 10420
---
apiVersion: v1
kind: Service
metadata:
  name: vulnerabilitytracer-coordinator
  labels:
    app: vulnerabilitytracer-coordinator
    version: v1
spec:
  ports:
    - name: http
      port: 10420
  selector:
    app: vulnerabilitytracer-coordinator
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vulnerabilitytracer-coordinator
spec:
  gateways:
    - vulnerabilitytracer-gateway
  hosts:
    - 'coordinator.vulnerabilitytracer.localhost'
  http:
    - route:
        - destination:
            host: vulnerabilitytracer-coordinator.vulnerabilitytracer.svc.cluster.local
