kube-manifests/vulnerabilitytracer/vulnerabilitytracer-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-dashboard
  labels:
    app: vulnerabilitytracer-dashboard
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-dashboard
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-dashboard
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-dashboard
          name: dashboard
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vulnerabilitytracer-dashboard
  labels:
    app: vulnerabilitytracer-dashboard
    version: v1
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: vulnerabilitytracer-dashboard
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vulnerabilitytracer-dashboard
spec:
  gateways:
    - vulnerabilitytracer-gateway
  hosts:
    - 'dashboard.vulnerabilitytracer.localhost'
  http:
    - name: "api"
      match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: vulnerabilitytracer-manager.vulnerabilitytracer.svc.cluster.local
    - name: "static-files"
      route:
        - destination:
            host: vulnerabilitytracer-dashboard.vulnerabilitytracer.svc.cluster.local
