kube-manifests/vulnerabilitytracer/vulnerabilitytracer-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerabilitytracer-manager
  labels:
    app: vulnerabilitytracer-manager
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerabilitytracer-manager
      version: v1
  template:
    metadata:
      labels:
        app: vulnerabilitytracer-manager
        version: v1
    spec:
      containers:
        - image: vulnerabilitytracer-manager
          name: vulnerabilitytracer
          ports:
            - name: http
              containerPort: 11420
---
apiVersion: v1
kind: Service
metadata:
  name: vulnerabilitytracer-manager
  labels:
    app: vulnerabilitytracer-manager
    version: v1
spec:
  ports:
    - name: http
      port: 11420
  selector:
    app: vulnerabilitytracer-manager
    version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vulnerabilitytracer-manager
spec:
  gateways:
    - vulnerabilitytracer-gateway
  hosts:
    - 'manager.vulnerabilitytracer.localhost'
  http:
    - route:
        - destination:
            host: vulnerabilitytracer-manager.vulnerabilitytracer.svc.cluster.local
